# Pyda

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ISSUES.md  README.md  bandit.yaml  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  tests.yml
docs/: README.md
examples/titanic/: example_ingest.py  example_pipeline.py
src/: pipeline.py
src/pyda/: __init__.py
src/pyda/cleaning/: __init__.py  clean.py
src/pyda/ingestion/: __init__.py  ingest.py
src/pyda/processing/: __init__.py  feature.py
src/pyda/visualization/: __init__.py
tests/: test_clean.py  test_feature.py  test_ingest.py
tests/data/: test_data.json
