[project]
name = "pyda"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayush Agarwal",email = "dearayush2@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "src/pyda" }
]
requires-python = "^3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
