[project]
name = "pyda"
version = "0.1.0"
description = "A beginner-friendly lightweight ETL library"
authors = [
    { name = "Ayush Agarwal", email = "dearayush2@gmail.com" }
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)"
]
packages = [
    { include = "pyda", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "pre-commit(>=4.5.1,<5.0.0)"
]

[tool.coverage.run]
source = ["pyda"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true